--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,6 @@ repository = "https://github.com/OffchainLabs/stylus-sdk-bf"
 [dependencies]
 eyre = "0.6.5"
 structopt = "0.3.23"
-wasmer = { path = "../../tools/wasmer/lib/api/" }
+wasmer = "4.1.1"
 
 [workspace]
